fix: fix the text align of result-text to center
Fixed the result-text element to center, so was noticed when
using larger numebrs.

--- a/extension/resources/css/styles-ext.css
+++ b/extension/resources/css/styles-ext.css
@@ -261,6 +261,7 @@ body {
 }
 
 .result-text {
+  text-align: center;
   font-size: var(--font-14);
   font-weight: var(--font-weight-400);
   line-height: 2rem;
