--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -431,7 +431,7 @@ body {
   border: 2px solid var(--clr-dt-accent-tint);
   border-radius: var(--border-rad-05);
   width: 100%;
-  max-width: 11.7rem;
+  width: 11.7rem;
   height: 8.3rem;
   font-family: inherit;
   font-size: 5.8rem;
@@ -487,6 +487,7 @@ body {
 }
 
 .result-text {
+  text-align: center;
   font-size: var(--font-14);
   font-weight: var(--font-weight-400);
   line-height: 2rem;
